statusicondir   = $(datadir)/icons/ubuntu-mono-dark/status/24
statusicon_DATA = caps-lock-on.svg    \
                  num-lock-on.svg     \
                  scroll-lock-on.svg  \
                  caps-lock-off.svg   \
                  num-lock-off.svg    \
                  scroll-lock-off.svg
